Add B&W/Color mode toggle option (900 PLN, 3 KB)

--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@
 
             <div class="control-item">
                 <label>
+                    <input type="checkbox" id="colorMode" checked>
+                    <span>Kolor (B&W gdy wyłączony)</span>
+                </label>
+            </div>
+
+            <div class="control-item">
+                <label>
                     <input type="checkbox" id="animations" checked>
                     <span>Animacje</span>
                 </label>
