Add HUD Display toggle option (350 PLN, 1 KB)

--- a/index.html
+++ b/index.html
@@ -225,6 +225,13 @@
                 </label>
             </div>
 
+            <div class="control-item">
+                <label>
+                    <input type="checkbox" id="hud" checked>
+                    <span>HUD Display</span>
+                </label>
+            </div>
+
             <button class="reset-btn" id="resetBtn">🔄 RESTART GAME</button>
         </div>
 
