Ensure checkboxes have identical size with flex-shrink and min-width/height

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             cursor: pointer;
             width: 18px;
             height: 18px;
+            flex-shrink: 0;
+            min-width: 18px;
+            min-height: 18px;
         }
 
         .game-container {
