Rename HUD to Tips and add Health Bar feature (450 PLN, 1.5 KB)

--- a/index.html
+++ b/index.html
@@ -230,8 +230,15 @@
 
             <div class="control-item">
                 <label>
-                    <input type="checkbox" id="hud" checked>
-                    <span>HUD Display</span>
+                    <input type="checkbox" id="tips" checked>
+                    <span>Tips Display</span>
+                </label>
+            </div>
+
+            <div class="control-item">
+                <label>
+                    <input type="checkbox" id="healthBar" checked>
+                    <span>Health Bar</span>
                 </label>
             </div>
 
