Add Autofollow Mouse feature (400 PLN, 1.5 KB) - continuously follow cursor

--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
 
             <div class="control-item">
                 <label>
+                    <input type="checkbox" id="autofollow">
+                    <span>Autofollow Mouse</span>
+                </label>
+            </div>
+
+            <div class="control-item">
+                <label>
                     <input type="checkbox" id="graphics" checked>
                     <span>HD Graphics</span>
                 </label>
