Add Debug Console feature (300 PLN, 0.8 KB) - shows position, velocity, FPS

--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
 
             <div class="control-item">
                 <label>
+                    <input type="checkbox" id="debugConsole">
+                    <span>Debug Console</span>
+                </label>
+            </div>
+
+            <div class="control-item">
+                <label>
                     <input type="checkbox" id="healthBar" checked>
                     <span>Health Bar</span>
                 </label>
