Add AI Prompts counter to pricing (25 prompts × 0.15 PLN = 3.75 PLN)

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
                     <span>Work Time:</span>
                     <span id="workTime">0 PLN</span>
                 </div>
+                <div class="summary-row">
+                    <span>AI Prompts:</span>
+                    <span id="promptCost">0 PLN</span>
+                </div>
                 <div class="summary-row summary-total">
                     <span>TOTAL:</span>
                     <span id="totalCost">0 PLN</span>
