--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="summary">
                 <div class="summary-row">
                     <span>Code Modules:</span>
-                    <span id="moduleCost">0 PLN</span>
+                    <span id="moduleCost">0 EUR</span>
                 </div>
                 <div class="summary-row">
                     <span>Memory Used:</span>
@@ -281,15 +281,15 @@
                 </div>
                 <div class="summary-row">
                     <span>Work Time:</span>
-                    <span id="workTime">0 PLN</span>
+                    <span id="workTime">0 EUR</span>
                 </div>
                 <div class="summary-row">
                     <span>AI Prompts:</span>
-                    <span id="promptCost">0 PLN</span>
+                    <span id="promptCost">0 EUR</span>
                 </div>
                 <div class="summary-row summary-total">
                     <span>TOTAL:</span>
-                    <span id="totalCost">0 PLN</span>
+                    <span id="totalCost">0 EUR</span>
                 </div>
             </div>
         </div>
