--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-size: 13px;
+        }
+
+        .control-separator {
+            height: 1px;
+            background: #4CAF50;
+            margin: 1px 0;
         }
 
         .control-item label {
@@ -180,6 +187,7 @@
                 <div class="timer-value" id="timer">00:00:00</div>
             </div>
 
+            <!-- CONTROLS GROUP -->
             <div class="control-item">
                 <label>
                     <input type="checkbox" id="keyboardControl" checked>
@@ -201,6 +209,9 @@
                 </label>
             </div>
 
+            <div class="control-separator"></div>
+
+            <!-- GRAPHICS GROUP -->
             <div class="control-item">
                 <label>
                     <input type="checkbox" id="graphics" checked>
@@ -222,6 +233,9 @@
                 </label>
             </div>
 
+            <div class="control-separator"></div>
+
+            <!-- EFFECTS GROUP -->
             <div class="control-item">
                 <label>
                     <input type="checkbox" id="sounds" checked>
@@ -236,6 +250,9 @@
                 </label>
             </div>
 
+            <div class="control-separator"></div>
+
+            <!-- UI GROUP -->
             <div class="control-item">
                 <label>
                     <input type="checkbox" id="tips" checked>
