Increase AI Prompts price to 0.25 EUR and reduce font size to 10px for Work Time and AI Prompts

--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
             margin-bottom: 8px;
         }
 
+        .summary-row-small {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            font-size: 10px;
+        }
+
         .summary-total {
             font-size: 14px;
             font-weight: bold;
@@ -297,11 +304,11 @@
                     <span>Code Modules:</span>
                     <span id="moduleCost">0 EUR</span>
                 </div>
-                <div class="summary-row">
+                <div class="summary-row-small">
                     <span>Work Time:</span>
                     <span id="workTime">0 EUR</span>
                 </div>
-                <div class="summary-row">
+                <div class="summary-row-small">
                     <span>AI Prompts:</span>
                     <span id="promptCost">0 EUR</span>
                 </div>
