Add 10% margin calculated from subtotal, displayed under AI Prompts

--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
                     <span>AI Prompts:</span>
                     <span id="promptCost">0 EUR</span>
                 </div>
+                <div class="summary-row-small">
+                    <span>Margin (10%):</span>
+                    <span id="marginCost">0 EUR</span>
+                </div>
                 <div class="summary-row summary-total">
                     <span>TOTAL:</span>
                     <span id="totalCost">0 EUR</span>
