--- a/index.html
+++ b/index.html
@@ -313,6 +313,10 @@
                     <span id="promptCost">0 EUR</span>
                 </div>
                 <div class="summary-row-small">
+                    <span>Fun Time:</span>
+                    <span id="funTime">0 EUR</span>
+                </div>
+                <div class="summary-row-small">
                     <span>Margin (10%):</span>
                     <span id="marginCost">0 EUR</span>
                 </div>
