Revert Fun Time to 0.10 EUR/min and add Energy Cost 0.10 EUR/min above Margin

--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                     <span id="funTime">0 EUR</span>
                 </div>
                 <div class="summary-row-small">
+                    <span>Energy Cost:</span>
+                    <span id="energyCost">0 EUR</span>
+                </div>
+                <div class="summary-row-small">
                     <span>Margin (10%):</span>
                     <span id="marginCost">0 EUR</span>
                 </div>
