Add Walls (350 EUR) and Wall Collision (450 EUR) features with room and 2 openings

--- a/index.html
+++ b/index.html
@@ -281,6 +281,23 @@
                 </label>
             </div>
 
+            <div class="control-separator"></div>
+
+            <!-- WORLD GROUP -->
+            <div class="control-item">
+                <label>
+                    <input type="checkbox" id="walls" checked>
+                    <span>Walls</span>
+                </label>
+            </div>
+
+            <div class="control-item">
+                <label>
+                    <input type="checkbox" id="wallCollision" checked>
+                    <span>Wall Collision</span>
+                </label>
+            </div>
+
             <button class="reset-btn" id="resetBtn">🔄 RESTART GAME</button>
         </div>
 
