--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         .panel {
             background: #2a2a2a;
             border-radius: 8px;
-            padding: 15px;            overflow-y: auto;
+            padding: 15px;
+            overflow-y: auto;
         }
 
         .panel h2 {
@@ -194,21 +195,21 @@
             <h2>Controls</h2>
 
             <!-- DIMENSION SELECTOR -->
-            <div style="background: #444; padding: 10px; margin-bottom: 1px; border-radius: 5px;">
-                <div style="font-size: 11px; color: #FFD700; margin-bottom: 5px;">
+            <div style="background: #333; padding: 10px; margin-bottom: 1px; border-radius: 5px;">
+                <div style="font-size: 13px; color: #FFD700; margin-bottom: 8px; font-weight: bold;">
                     Game Dimension:
                 </div>
-                <div style="display: flex; flex-direction: column; gap: 3px; font-size: 12px;">
+                <div style="display: flex; flex-direction: column; gap: 5px; font-size: 13px;">
                     <label style="cursor: pointer; display: flex; align-items: center;">
-                        <input type="radio" name="dimension" value="1d" style="margin-right: 8px;">
+                        <input type="radio" name="dimension" value="1d" id="dim1d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                         <span>1D (1 EUR)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
-                        <input type="radio" name="dimension" value="2d" checked style="margin-right: 8px;">
+                        <input type="radio" name="dimension" value="2d" id="dim2d" checked style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                         <span>2D (350 EUR)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
-                        <input type="radio" name="dimension" value="3d" style="margin-right: 8px;">
+                        <input type="radio" name="dimension" value="3d" id="dim3d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                         <span>3D (1200 EUR)</span>
                     </label>
                 </div>
