--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 13px;
+            font-size: 12px;
         }
 
         .control-separator {
@@ -147,7 +147,7 @@
             border-radius: 5px;
             cursor: pointer;
             width: 100%;
-            font-size: 13px;
+            font-size: 12px;
             font-weight: bold;
             margin-top: 15px;
             transition: background 0.3s;
@@ -177,7 +177,7 @@
         }
 
         .timer-value {
-            font-size: 14px;
+            font-size: 13px;
             font-weight: bold;
             color: #FFD700;
         }
@@ -196,16 +196,16 @@
 
             <!-- DIMENSION SELECTOR -->
             <div style="background: #333; padding: 10px; margin-bottom: 1px; border-radius: 5px;">
-                <div style="font-size: 13px; color: #FFD700; margin-bottom: 8px; font-weight: bold;">
+                <div style="font-size: 12px; color: #FFD700; margin-bottom: 8px; font-weight: bold;">
                     Game Dimension:
                 </div>
-                <div style="display: flex; flex-direction: column; gap: 5px; font-size: 13px;">
+                <div style="display: flex; flex-direction: column; gap: 5px; font-size: 12px;">
                     <label style="cursor: pointer; display: flex; align-items: center;">
-                        <input type="radio" name="dimension" value="1d" id="dim1d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
+                        <input type="radio" name="dimension" value="1d" id="dim1d" checked style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                         <span>1D (1 EUR)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
-                        <input type="radio" name="dimension" value="2d" id="dim2d" checked style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
+                        <input type="radio" name="dimension" value="2d" id="dim2d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
                         <span>2D (350 EUR)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
@@ -340,7 +340,7 @@
                     <span>Memory Used:</span>
                     <span id="memorySize">0 KB</span>
                 </div>
-                <div class="summary-row">
+                <div class="summary-row-small">
                     <span>Code Modules:</span>
                     <span id="moduleCost">0 EUR</span>
                 </div>
