--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
                 <div style="display: flex; flex-direction: column; gap: 5px; font-size: 12px;">
                     <label style="cursor: pointer; display: flex; align-items: center;">
                         <input type="radio" name="dimension" value="1d" id="dim1d" checked style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
-                        <span>1D (1 EUR)</span>
+                        <span>1D (1 USD)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
                         <input type="radio" name="dimension" value="2d" id="dim2d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
-                        <span>2D (350 EUR)</span>
+                        <span>2D (927 USD)</span>
                     </label>
                     <label style="cursor: pointer; display: flex; align-items: center;">
                         <input type="radio" name="dimension" value="3d" id="dim3d" style="margin-right: 10px; width: 18px; height: 18px; cursor: pointer;">
-                        <span>3D (1200 EUR)</span>
+                        <span>3D (1392 USD)</span>
                     </label>
                 </div>
             </div>
@@ -342,33 +342,35 @@
                 </div>
                 <div class="summary-row-small">
                     <span>Code Modules:</span>
-                    <span id="moduleCost">0 EUR</span>
+                    <span id="moduleCost">0 USD</span>
                 </div>
                 <div class="summary-row-small">
                     <span>AI Prompts:</span>
-                    <span id="promptCost">0 EUR</span>
+                    <span id="promptCost">0 USD</span>
                 </div>
                 <div class="summary-row-small">
                     <span>Work Time:</span>
-                    <span id="workTime">0 EUR</span>
+                    <span id="workTime">0 USD</span>
                 </div>
                 <div class="summary-row-small">
                     <span>Energy Cost:</span>
-                    <span id="energyCost">0 EUR</span>
+                    <span id="energyCost">0 USD</span>
                 </div>
                 <div class="summary-row-small">
                     <span>Fun Time:</span>
-                    <span id="funTime">0 EUR</span>
+                    <span id="funTime">0 USD</span>
                 </div>
                 <div class="summary-row-small">
                     <span>Margin (10%):</span>
-                    <span id="marginCost">0 EUR</span>
+                    <span id="marginCost">0 USD</span>
                 </div>
                 <div class="summary-row summary-total">
                     <span>TOTAL:</span>
-                    <span id="totalCost">0 EUR</span>
+                    <span id="totalCost">0 USD</span>
                 </div>
             </div>
+            
+            <button class="reset-btn" id="buyBtn" style="background: #4CAF50; margin-top: 15px;">💰 GH SPONSOR</button>
         </div>
     </div>
 
