Add canvas autofocus, unify button styles, and set GH Sponsor to fixed 1 USD

--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
                 </label>
             </div>
 
-            <button class="reset-btn" id="resetBtn">🔄 RESTART GAME</button>
+            <button class="reset-btn" id="resetBtn" style="background: #4CAF50;">🔄 RESTART GAME</button>
         </div>
 
         <!-- Middle - Game -->
         <div class="game-container">
-            <canvas id="gameCanvas"></canvas>
+            <canvas id="gameCanvas" tabindex="0"></canvas>
         </div>
 
         <!-- Right Panel - Pricing -->
@@ -370,7 +370,7 @@
                 </div>
             </div>
             
-            <button class="reset-btn" id="buyBtn" style="background: #4CAF50; margin-top: 15px;">💰 GH SPONSOR</button>
+            <button class="reset-btn" id="buyBtn" style="background: #4CAF50; margin-top: 15px;">🤡 GH SPONSOR 😉</button>
         </div>
     </div>
 
